Run 'npm run prettier:html'

--- a/source/use-case/ajaxapp/display/src/index.html
+++ b/source/use-case/ajaxapp/display/src/index.html
@@ -1,15 +1,15 @@
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Ajax Example</title>
-    </head>
-    <body>
-        <h2>GitHub User Info</h2>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ajax Example</title>
+  </head>
+  <body>
+    <h2>GitHub User Info</h2>
 
-        <button onclick="getUserInfo('js-primer-example');">Get user info</button>
+    <button onclick="getUserInfo('js-primer-example');">Get user info</button>
 
-        <div id="result"></div>
+    <div id="result"></div>
 
-        <script src="index.js"></script>
-    </body>
+    <script src="index.js"></script>
+  </body>
 </html>
